GVR-90 naam gewijzigd

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 	</body>
-	<script id="vo_browser_support_script" src="./vo-browser-support.js"></script>
+	<script id="browser_support_script" src="./browser-support.js"></script>
 	<link rel="stylesheet" href="./node_modules/outdatedbrowser/outdatedbrowser/outdatedbrowser.min.css">
 </html>
