--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 	<head>
 		<title>vo-browser-support voorbeeld</title>
+		<script id="browser_support_script" src="./browser-support.js"></script>
 	</head>
-	<body>
-	</body>
-	<script id="browser_support_script" src="./browser-support.js"></script>
-	<link rel="stylesheet" href="./node_modules/outdatedbrowser/outdatedbrowser/outdatedbrowser.min.css">
+	<body></body>
 </html>
