GVR-90 browser-support configuratie en testen

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>vo-browser-support voorbeeld</title>
-		<script id="browser_support_script" src="./browser-support.js"></script>
+		<script id="browser_support_script" src="./browser-support.js" chrome-versie="false"></script>
 	</head>
 	<body></body>
 </html>
